# Trabalhos_Rec_Padroes

./: .env.example  .gitignore  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
classificao_padroes/: __init__.py  dataset.py  features.py  models.py  models_trabalho1.py  models_trabalho2.py  models_trabalho3.py  plots.py
classificao_padroes/modeling/: predict.py  train.py
docs/: README.md  mkdocs.yml
docs/docs/: index.md  reference.md
docs/relatorio_tc1/: main.tex
docs/relatorio_tc1/2-textuais/: 1-introducao.tex  3-metodologia.tex  4-resultados.tex  5-conclusao.tex
docs/relatorio_tc2/: caption2.sty  main.tex  sbc-template.bib
docs/relatorio_tc2/2-textuais/: 1-introducao.tex  3-metodologia.tex  4-resultados.tex  5-conclusao.tex
docs/relatorio_tc3/: 4-resultados.tex  main.tex  main_tc3.tex
docs/relatorio_tc3/2-textuais/: 1-introducao.tex  3-metodologia.tex  4-resultados.tex  5-conclusao.tex
notebooks/: Experimentos_KNN.ipynb  trabalho1_experimentos.ipynb
notebooks/Trabalho Computacional 1/: Experimentos_KNN.ipynb  trabalho1_experimentos.html  trabalho1_experimentos.ipynb
notebooks/Trabalho Computacional 2/: testTrab2.py  trabalho2_experimentos.ipynb
notebooks/Trabalho Computacional 3/: trab3_script.py  trabalho3_experimentos.ipynb
references/: demoPCA.m  demoPCA.py
references/Modelo Trabalho Latex/Modelo___Trabalho_1_ICAp___SBC/: lista-de-abreviaturas-e-siglas.tex  main.tex  sbc-template.bib  sbc-template_old.bib
references/Modelo Trabalho Latex/Modelo___Trabalho_1_ICAp___SBC/2-textuais/: 0-inicio-pesquisa.tex  1-introducao.tex  3-metodologia.tex  4-resultados.tex  5-conclusao.tex
src/trabalhos_rec_padroes/: __init__.py
src/trabalhos_rec_padroes/data/: __init__.py  make_dataset.py
src/trabalhos_rec_padroes/features/: __init__.py  build_features.py
src/trabalhos_rec_padroes/models/: __init__.py  predict_model.py  train_model.py
src/trabalhos_rec_padroes/visualization/: __init__.py  visualize.py
tests/: __init__.py  test_package.py
