[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "classificao_padroes"
version = "0.0.1"
description = "Implementa\u00e7\u00e3o do Trabalho Computacional 1 de Reconhecimento de Padr\u00f5es PPGETI"
authors = [
  { name = "Lucas Jos\u00e9 Lemos Braz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "ucimlrepo>=0.0.7",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["classificao_padroes"]
force_sort_within_sections = true


